rename same properties from insights

--- a/calendar_agenda.html
+++ b/calendar_agenda.html
@@ -137,11 +137,11 @@
                 <div class="contents">
                   <div id="hosting-flyout-menu" aria-label="Open hosting menu">
                     <div class="_11rss4h">
-                      <div class="_12d0llg5">
-                        <div class="_qo24lwc"><button class="_bzfhend" type="button"><span class="_vwled5"
+                      <div class="flex-bar">
+                        <div class="_qo24lwc"><button class="_bzfhend" type="button"><span class="app-theme__navbar-left-logo-icon-wrapper"
                               aria-hidden="true">
-                              <div class="_jro6t0">
-                                <div class="_rqfxvmb">
+                              <div class="flex">
+                                <div class="flex-item">
                                   <div style="margin-right: 0px;"><svg viewBox="0 0 1000 1000" role="presentation"
                                       aria-hidden="true" focusable="false"
                                       style="height: 32px; width: 32px; display: block; fill: rgb(0, 132, 137);">
@@ -150,12 +150,12 @@
                                       </path>
                                     </svg></div>
                                 </div>
-                                <div class="_rqfxvmb">
+                                <div class="flex-item">
                                   <div></div>
                                 </div>
                               </div>
                             </span><span class="visually-hidden dir dir-ltr">Experience hosting dashboard</span></button></div>
-                        <div class="_1iti0ju">
+                        <div class="flex-bar-item">
                           <div style="margin-right: 16px;"><button class="_1ym4cfnq" aria-label="Open hosting menu"
                               type="button" aria-live="polite" aria-haspopup="true" aria-controls="hosting-flyout-menu">
                               <div class="_13ucsvw"></div>
