--- a/edit/about.html
+++ b/edit/about.html
@@ -545,7 +545,7 @@
                                               aria-labelledby="ABOUT_YOU_PROFILE_EDIT_LINKS-row-title"
                                               class="explore-filter-menu__list-padding explore-filter-menu__list-padding--reset dir dir-ltr"
                                             >
-                                              <div class="_jro6t0">
+                                              <div class="flex">
                                                 <div class="tab__checkbox-mr-16">
                                                   <div class="place__tips-profile-img">
                                                     <div
