--- a/edit/what.html
+++ b/edit/what.html
@@ -570,7 +570,7 @@ Join me in this fun and easy cooking experience where you will learn techniques 
                                               <div>
                                                 <div class="_ttgom0">
                                                   <label
-                                                    class="_19nw8j1"
+                                                    class="form-floating__control"
                                                     for="DURATION"
                                                   >
                                                     <div class="_zhftk97">
