--- a/insights.html
+++ b/insights.html
@@ -49,12 +49,12 @@
                       aria-label="Open hosting menu"
                     >
                       <div class="_11rss4h">
-                        <div class="_12d0llg5">
+                        <div class="flex-bar">
                           <div class="_qo24lwc">
                             <button class="_bzfhend" type="button">
-                              <span class="_vwled5" aria-hidden="true">
-                                <div class="_jro6t0">
-                                  <div class="_rqfxvmb">
+                              <span class="app-theme__navbar-left-logo-icon-wrapper" aria-hidden="true">
+                                <div class="flex">
+                                  <div class="flex-item">
                                     <div style="margin-right: 0px">
                                       <svg
                                         viewBox="0 0 1000 1000"
@@ -74,7 +74,7 @@
                                       </svg>
                                     </div>
                                   </div>
-                                  <div class="_rqfxvmb"><div></div></div>
+                                  <div class="flex-item"><div></div></div>
                                 </div>
                               </span>
                               <span class="a8jt5op dir dir-ltr">
@@ -82,7 +82,7 @@
                               </span>
                             </button>
                           </div>
-                          <div class="_1iti0ju">
+                          <div class="flex-bar-item">
                             <div style="margin-right: 16px">
                               <button
                                 class="_1ym4cfnq"
@@ -236,11 +236,11 @@
               <div class="site-content__body">
                 <div class="_1ynbv25 hidden-lg">
                   <main id="site-content">
-                    <div class="c1yo0219 dir dir-ltr" style="">
+                    <div class="flex-before-after dir dir-ltr" style="">
                       <div style="--gp-section-max-width: 1120px">
                         <div class="_le6wlg">
                           <div
-                            class="plmw1e5 mq5rv0q dir dir-ltr"
+                            class="wrapper-full max__width dir dir-ltr"
                             style="--maxWidth: 1120px"
                           >
                             <div
@@ -267,11 +267,11 @@
                         </div>
                       </div>
                     </div>
-                    <div class="c1yo0219 dir dir-ltr" style="">
+                    <div class="flex-before-after dir dir-ltr" style="">
                       <div style="--gp-section-max-width: 1120px">
                         <div class="_le6wlg">
                           <div
-                            class="plmw1e5 mq5rv0q dir dir-ltr"
+                            class="wrapper-full max__width dir dir-ltr"
                             style="--maxWidth: 1120px"
                           >
                             <div
@@ -279,7 +279,7 @@
                               data-section-id="EXPERIENCES_HOST_PERFORMANCE_HUB_DATA_FILTER_BAR"
                               style="padding-top: 8px; padding-bottom: 16px"
                             >
-                              <div class="_1yfus1e">
+                              <div class="h-full">
                                 <div
                                   class="dir dir-ltr"
                                   role="group"
@@ -294,8 +294,8 @@
                                       filters
                                     </span>
                                   </div>
-                                  <div class="_5kaapu">
-                                    <div class="_sb2tj">
+                                  <div class="flex-items-center">
+                                    <div class="main-content__agenda-desc">
                                       <button
                                         class="_1jw0pctt"
                                         aria-pressed="true"
@@ -327,7 +327,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="c1yo0219 dir dir-ltr" style="">
+                    <div class="flex-before-after dir dir-ltr" style="">
                       <div style="--gp-section-max-width: 1120px">
                         <div
                           data-plugin-in-point-id="EXPERIENCES_HOST_PERFORMANCE_HUB_HERO_CHART_SECTION"
@@ -478,7 +478,7 @@
                                       </svg>
                                     </div>
                                   </div>
-                                  <div class="_e296pg">
+                                  <div class="relative">
                                     <div class="_e8kdv1">
                                       <p class="_1ac59ra">Nothing to report</p>
                                       <p class="_1cy0y9j">
@@ -1286,11 +1286,11 @@
                         </div>
                       </div>
                     </div>
-                    <div class="c1yo0219 dir dir-ltr" style="">
+                    <div class="flex-before-after dir dir-ltr" style="">
                       <div style="--gp-section-max-width: 1120px">
                         <div class="_le6wlg">
                           <div
-                            class="plmw1e5 mq5rv0q dir dir-ltr"
+                            class="wrapper-full max__width dir dir-ltr"
                             style="--maxWidth: 1120px"
                           >
                             <div
@@ -1308,10 +1308,10 @@
                                     <span class="_1wkplgx">Opportunities</span>
                                   </h2>
                                 </section>
-                                <div class="_1bjnx2l">
+                                <div class="site-content__button-wrapper">
                                   <div class="_ttgom0">
                                     <label
-                                      class="_19nw8j1"
+                                      class="form-floating__control"
                                       for="EXPERIENCES_HOST_INSIGHTS_HEADING_SELECT-select"
                                     >
                                       <span class="a8jt5op dir dir-ltr">
@@ -1361,7 +1361,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="c1yo0219 dir dir-ltr" style="">
+                    <div class="flex-before-after dir dir-ltr" style="">
                       <div style="--gp-section-max-width: 1120px">
                         <div
                           data-plugin-in-point-id="EXPERIENCES_HOST_INSIGHTS_STANDARDS"
@@ -1370,7 +1370,7 @@
                         >
                           <div class="_le6wlg">
                             <div
-                              class="plmw1e5 mq5rv0q dir dir-ltr"
+                              class="wrapper-full max__width dir dir-ltr"
                               style="--maxWidth: 1120px"
                             >
                               <div>
@@ -1379,7 +1379,7 @@
                                   class="_14i3z6h"
                                   elementtiming="LCP-target"
                                 >
-                                  <span class="_1muy8yf">
+                                  <span class="site-content__content-menu-h2-text">
                                     Performance highlights
                                   </span>
                                 </h3>
@@ -1489,11 +1489,11 @@
                         </div>
                       </div>
                     </div>
-                    <div class="c1yo0219 dir dir-ltr" style="">
+                    <div class="flex-before-after dir dir-ltr" style="">
                       <div style="--gp-section-max-width: 1120px">
                         <div class="_le6wlg">
                           <div
-                            class="plmw1e5 mq5rv0q dir dir-ltr"
+                            class="wrapper-full max__width dir dir-ltr"
                             style="--maxWidth: 1120px"
                           >
                             <div
@@ -1508,7 +1508,7 @@
                                     class="_14i3z6h"
                                     elementtiming="LCP-target"
                                   >
-                                    <span class="_1muy8yf">
+                                    <span class="site-content__content-menu-h2-text">
                                       What guests suggest improving
                                     </span>
                                   </h3>
@@ -1684,7 +1684,7 @@
                     </div>
                   </main>
                 </div>
-                <div class="tab__content-visibility">
+                <div class="hidden block-lg">
                   <main id="site-content">
                     <div class="flex-before-after dir dir-ltr">
                       <div style="--gp-section-max-width: 1120px">
