--- a/edit/GuestReq.html
+++ b/edit/GuestReq.html
@@ -515,7 +515,7 @@
                                           >
                                             <div class="_4mmmhh">
                                               <label
-                                                class="_19nw8j1"
+                                                class="form-floating__control"
                                                 for="MINIMUM_AGE-select"
                                               >
                                                 <div>
@@ -634,7 +634,7 @@
                                                   for="underTwo-row-checkbox"
                                                   class="_13xlah4"
                                                 >
-                                                  <div class="_jro6t0">
+                                                  <div class="flex">
                                                     <div class="explore-filter-menu__list-label">
                                                       <div
                                                         id="underTwo-row-title"
@@ -720,7 +720,7 @@
                                                   for="Tag:4804-row-checkbox"
                                                   class="_13xlah4"
                                                 >
-                                                  <div class="_jro6t0">
+                                                  <div class="flex">
                                                     <div class="explore-filter-menu__list-label">
                                                       <div
                                                         id="Tag:4804-row-title"
@@ -771,7 +771,7 @@
                                                   for="Tag:4802-row-checkbox"
                                                   class="_13xlah4"
                                                 >
-                                                  <div class="_jro6t0">
+                                                  <div class="flex">
                                                     <div class="explore-filter-menu__list-label">
                                                       <div
                                                         id="Tag:4802-row-title"
@@ -825,7 +825,7 @@
                                                   for="Tag:4805-row-checkbox"
                                                   class="_13xlah4"
                                                 >
-                                                  <div class="_jro6t0">
+                                                  <div class="flex">
                                                     <div class="explore-filter-menu__list-label">
                                                       <div
                                                         id="Tag:4805-row-title"
@@ -1163,7 +1163,7 @@ Guests should know how to fry food and also bring boiled eggs.</textarea
                                                   for="requireIdVerification-row-checkbox"
                                                   class="_13xlah4"
                                                 >
-                                                  <div class="_jro6t0">
+                                                  <div class="flex">
                                                     <div class="explore-filter-menu__list-label">
                                                       <div
                                                         id="requireIdVerification-row-title"
