--- a/edit/bring.html
+++ b/edit/bring.html
@@ -586,7 +586,7 @@
                                                       type="button"
                                                       class="_oda838"
                                                     >
-                                                      <span class="_e296pg">
+                                                      <span class="relative">
                                                         <svg
                                                           viewBox="0 0 32 32"
                                                           xmlns="http://www.w3.org/2000/svg"
@@ -647,7 +647,7 @@
                                                       type="button"
                                                       class="_oda838"
                                                     >
-                                                      <span class="_e296pg">
+                                                      <span class="relative">
                                                         <svg
                                                           viewBox="0 0 32 32"
                                                           xmlns="http://www.w3.org/2000/svg"
@@ -708,7 +708,7 @@
                                                       type="button"
                                                       class="_oda838"
                                                     >
-                                                      <span class="_e296pg">
+                                                      <span class="relative">
                                                         <svg
                                                           viewBox="0 0 32 32"
                                                           xmlns="http://www.w3.org/2000/svg"
@@ -769,7 +769,7 @@
                                                       type="button"
                                                       class="_oda838"
                                                     >
-                                                      <span class="_e296pg">
+                                                      <span class="relative">
                                                         <svg
                                                           viewBox="0 0 32 32"
                                                           xmlns="http://www.w3.org/2000/svg"
@@ -830,7 +830,7 @@
                                                       type="button"
                                                       class="_oda838"
                                                     >
-                                                      <span class="_e296pg">
+                                                      <span class="relative">
                                                         <svg
                                                           viewBox="0 0 32 32"
                                                           xmlns="http://www.w3.org/2000/svg"
@@ -891,7 +891,7 @@
                                                       type="button"
                                                       class="_oda838"
                                                     >
-                                                      <span class="_e296pg">
+                                                      <span class="relative">
                                                         <svg
                                                           viewBox="0 0 32 32"
                                                           xmlns="http://www.w3.org/2000/svg"
