--- a/edit/photos.html
+++ b/edit/photos.html
@@ -643,7 +643,7 @@
                                                         </div>
                                                       </div>
                                                       <div class="_1c1qb2i">
-                                                        <div class="_jro6t0">
+                                                        <div class="flex">
                                                           <div class="_s63vo4">
                                                             <div>
                                                               <div
@@ -878,7 +878,7 @@
                                                           </div>
                                                           <div class="_1c1qb2i">
                                                             <div
-                                                              class="_jro6t0"
+                                                              class="flex"
                                                             >
                                                               <div
                                                                 class="_s63vo4"
@@ -1032,7 +1032,7 @@
                                                           </div>
                                                           <div class="_1c1qb2i">
                                                             <div
-                                                              class="_jro6t0"
+                                                              class="flex"
                                                             >
                                                               <div
                                                                 class="_s63vo4"
@@ -1186,7 +1186,7 @@
                                                           </div>
                                                           <div class="_1c1qb2i">
                                                             <div
-                                                              class="_jro6t0"
+                                                              class="flex"
                                                             >
                                                               <div
                                                                 class="_s63vo4"
@@ -1340,7 +1340,7 @@
                                                           </div>
                                                           <div class="_1c1qb2i">
                                                             <div
-                                                              class="_jro6t0"
+                                                              class="flex"
                                                             >
                                                               <div
                                                                 class="_s63vo4"
@@ -1494,7 +1494,7 @@
                                                           </div>
                                                           <div class="_1c1qb2i">
                                                             <div
-                                                              class="_jro6t0"
+                                                              class="flex"
                                                             >
                                                               <div
                                                                 class="_s63vo4"
@@ -1648,7 +1648,7 @@
                                                           </div>
                                                           <div class="_1c1qb2i">
                                                             <div
-                                                              class="_jro6t0"
+                                                              class="flex"
                                                             >
                                                               <div
                                                                 class="_s63vo4"
@@ -1802,7 +1802,7 @@
                                                           </div>
                                                           <div class="_1c1qb2i">
                                                             <div
-                                                              class="_jro6t0"
+                                                              class="flex"
                                                             >
                                                               <div
                                                                 class="_s63vo4"
@@ -1956,7 +1956,7 @@
                                                           </div>
                                                           <div class="_1c1qb2i">
                                                             <div
-                                                              class="_jro6t0"
+                                                              class="flex"
                                                             >
                                                               <div
                                                                 class="_s63vo4"
