fix products pages modal

--- a/products.html
+++ b/products.html
@@ -21551,7 +21551,7 @@
                           <div class="contents">
                             <div role="dialog" aria-label="" aria-modal="true" class="_14oeh8k8">
                               <div class="_xgxxi4">
-                                <div class="_1kpxj8f"><button aria-label="Close" type="button" class="_oda838"><span
+                                <div class="_1kpxj8f"><button aria-label="Close" type="button" class="_oda838" data-button='close'><span
                                       class="relative"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"
                                         aria-hidden="true" role="presentation" focusable="false"
                                         style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 4; overflow: visible;">
