fix credit card logos in payment

--- a/payment.html
+++ b/payment.html
@@ -578,7 +578,7 @@
                                                                     role="img"
                                                                     aria-label="Visa Card"
                                                                     ><img
-                                                                      src="//a0.muscache.com/airbnb/static/packages/assets/frontend/legacy-shared/svgs/payments/logo_visa.0adea522bb26bd90821a8fade4911913.svg"
+                                                                      src="https://a0.muscache.com/airbnb/static/packages/assets/frontend/legacy-shared/svgs/payments/logo_visa.0adea522bb26bd90821a8fade4911913.svg"
                                                                       alt="Visa Card"
                                                                       height="9"
                                                                       aria-hidden="true" /></span></span
@@ -588,7 +588,7 @@
                                                                     role="img"
                                                                     aria-label="Mastercard"
                                                                     ><img
-                                                                      src="//a0.muscache.com/airbnb/static/packages/assets/frontend/legacy-shared/svgs/payments/logo_mastercard.f18379cf1f27d22abd9e9cf44085d149.svg"
+                                                                      src="https://a0.muscache.com/airbnb/static/packages/assets/frontend/legacy-shared/svgs/payments/logo_mastercard.f18379cf1f27d22abd9e9cf44085d149.svg"
                                                                       alt="Mastercard"
                                                                       height="9"
                                                                       aria-hidden="true" /></span></span
@@ -598,7 +598,7 @@
                                                                     role="img"
                                                                     aria-label="Google Pay"
                                                                     ><img
-                                                                      src="//a0.muscache.com/airbnb/static/packages/assets/frontend/legacy-shared/svgs/payments/logo_googlepay.3f786bc031b59575d24f504dfb859da0.svg"
+                                                                      src="https://a0.muscache.com/airbnb/static/packages/assets/frontend/legacy-shared/svgs/payments/logo_googlepay.3f786bc031b59575d24f504dfb859da0.svg"
                                                                       alt="Google Pay"
                                                                       height="9"
                                                                       aria-hidden="true" /></span
@@ -628,7 +628,7 @@
                                                                     role="img"
                                                                     aria-label="Visa Card"
                                                                     ><img
-                                                                      src="//a0.muscache.com/airbnb/static/packages/assets/frontend/legacy-shared/svgs/payments/logo_visa.0adea522bb26bd90821a8fade4911913.svg"
+                                                                      src="https://a0.muscache.com/airbnb/static/packages/assets/frontend/legacy-shared/svgs/payments/logo_visa.0adea522bb26bd90821a8fade4911913.svg"
                                                                       alt="Visa Card"
                                                                       height="9"
                                                                       aria-hidden="true" /></span></span
@@ -638,7 +638,7 @@
                                                                     role="img"
                                                                     aria-label="Mastercard"
                                                                     ><img
-                                                                      src="//a0.muscache.com/airbnb/static/packages/assets/frontend/legacy-shared/svgs/payments/logo_mastercard.f18379cf1f27d22abd9e9cf44085d149.svg"
+                                                                      src="https://a0.muscache.com/airbnb/static/packages/assets/frontend/legacy-shared/svgs/payments/logo_mastercard.f18379cf1f27d22abd9e9cf44085d149.svg"
                                                                       alt="Mastercard"
                                                                       height="9"
                                                                       aria-hidden="true" /></span></span
@@ -648,7 +648,7 @@
                                                                     role="img"
                                                                     aria-label="Google Pay"
                                                                     ><img
-                                                                      src="//a0.muscache.com/airbnb/static/packages/assets/frontend/legacy-shared/svgs/payments/logo_googlepay.3f786bc031b59575d24f504dfb859da0.svg"
+                                                                      src="https://a0.muscache.com/airbnb/static/packages/assets/frontend/legacy-shared/svgs/payments/logo_googlepay.3f786bc031b59575d24f504dfb859da0.svg"
                                                                       alt="Google Pay"
                                                                       height="9"
                                                                       aria-hidden="true" /></span
