clone payment xs from live

--- a/insights.html
+++ b/insights.html
@@ -234,7 +234,7 @@
             </div>
             <main id="site-content" class="main_content">
               <div class="site-content__body">
-                <div class="_1ynbv25 hidden-lg">
+                <div class="block hidden-lg">
                   <main id="site-content">
                     <div class="flex-before-after dir dir-ltr" style="">
                       <div style="--gp-section-max-width: 1120px">
