fix payment in md

--- a/payment.html
+++ b/payment.html
@@ -2569,7 +2569,7 @@
                                                           data-testid="payment-option-dropdown-selector"
                                                         >
                                                           <div
-                                                            class="hidden block-xl"
+                                                            class=""
                                                           >
                                                             <div
                                                               class="payment-option-dropdown-pay-with"
@@ -2588,72 +2588,6 @@
                                                               <div
                                                                 class="header__logo-img-container"
                                                               >
-                                                                <span
-                                                                  class="header__logo-img"
-                                                                >
-                                                                  <span
-                                                                    role="img"
-                                                                    aria-label="Visa Card"
-                                                                  >
-                                                                    <img
-                                                                      src="https://a0.muscache.com/airbnb/static/packages/assets/frontend/legacy-shared/svgs/payments/logo_visa.0adea522bb26bd90821a8fade4911913.svg"
-                                                                      alt="Visa Card"
-                                                                      height="9"
-                                                                      aria-hidden="true"
-                                                                    />
-                                                                  </span>
-                                                                </span>
-                                                                <span
-                                                                  class="header__logo-img"
-                                                                >
-                                                                  <span
-                                                                    role="img"
-                                                                    aria-label="Mastercard"
-                                                                  >
-                                                                    <img
-                                                                      src="https://a0.muscache.com/airbnb/static/packages/assets/frontend/legacy-shared/svgs/payments/logo_mastercard.f18379cf1f27d22abd9e9cf44085d149.svg"
-                                                                      alt="Mastercard"
-                                                                      height="9"
-                                                                      aria-hidden="true"
-                                                                    />
-                                                                  </span>
-                                                                </span>
-                                                                <span
-                                                                  class="header__logo-img"
-                                                                >
-                                                                  <span
-                                                                    role="img"
-                                                                    aria-label="Google Pay"
-                                                                  >
-                                                                    <img
-                                                                      src="https://a0.muscache.com/airbnb/static/packages/assets/frontend/legacy-shared/svgs/payments/logo_googlepay.3f786bc031b59575d24f504dfb859da0.svg"
-                                                                      alt="Google Pay"
-                                                                      height="9"
-                                                                      aria-hidden="true"
-                                                                    />
-                                                                  </span>
-                                                                </span>
-                                                              </div>
-                                                            </div>
-                                                          </div>
-                                                          <div
-                                                            class="header__logo"
-                                                          >
-                                                            <div
-                                                              class="header__logo-wrapper"
-                                                            >
-                                                              <div
-                                                                class="header__logo-content"
-                                                              >
-                                                                <h2
-                                                                  tabindex="-1"
-                                                                  elementtiming="LCP-target"
-                                                                  class="heading"
-                                                                >
-                                                                  Pay with
-                                                                </h2>
-                                                              </div>
-                                                              <div>
                                                                 <span
                                                                   class="header__logo-img"
                                                                 >
@@ -3496,7 +3430,7 @@
                                                         class="confirm-pay__trip-detail-rate"
                                                       >
                                                         <div
-                                                          class="main-content__header-date--today"
+                                                          class=""
                                                         >
                                                           <span
                                                             class="confirm-pay__trip-detail-rate-wrapper"
@@ -3540,54 +3474,6 @@
                                                               aria-hidden="true"
                                                             >
                                                               &nbsp;(70 reviews)
-                                                            </span>
-                                                          </span>
-                                                        </div>
-                                                        <div
-                                                          class="header__logo"
-                                                        >
-                                                          <span
-                                                            class="confirm-pay__trip-detail-rate-wrapper"
-                                                          >
-                                                            <span
-                                                              class="text-highlight dir dir-ltr"
-                                                            >
-                                                              Rating 5.0 out of
-                                                              5; 70 reviews
-                                                            </span>
-                                                            <span
-                                                              class="confirm-pay__trip-detail-rate-icon"
-                                                            >
-                                                              <svg
-                                                                viewBox="0 0 32 32"
-                                                                xmlns="http://www.w3.org/2000/svg"
-                                                                aria-hidden="true"
-                                                                role="presentation"
-                                                                focusable="false"
-                                                                style="
-                                                                  display: block;
-                                                                  height: 10px;
-                                                                  width: 10px;
-                                                                  fill: currentcolor;
-                                                                "
-                                                              >
-                                                                <path
-                                                                  d="M15.094 1.579l-4.124 8.885-9.86 1.27a1 1 0 0 0-.542 1.736l7.293 6.565-1.965 9.852a1 1 0 0 0 1.483 1.061L16 25.951l8.625 4.997a1 1 0 0 0 1.482-1.06l-1.965-9.853 7.293-6.565a1 1 0 0 0-.541-1.735l-9.86-1.271-4.127-8.885a1 1 0 0 0-1.814 0z"
-                                                                  fill-rule="evenodd"
-                                                                ></path>
-                                                              </svg>
-                                                            </span>
-                                                            <span
-                                                              class="confirm-pay__trip-detail-rate-text"
-                                                              aria-hidden="true"
-                                                            >
-                                                              5.0
-                                                            </span>
-                                                            <span
-                                                              class="text__color-gray"
-                                                              aria-hidden="true"
-                                                            >
-                                                              &nbsp;(70)
                                                             </span>
                                                           </span>
                                                         </div>
