--- a/payment.html
+++ b/payment.html
@@ -1115,6 +1115,7 @@
                                                         </span>
                                                         <button
                                                           data-testid="quick-pay-payment-options-edit"
+                                                          data-modal='#payment-modal'
                                                           type="button"
                                                           class="_15rpys7s"
                                                         >
@@ -2568,9 +2569,7 @@
                                                         <div
                                                           data-testid="payment-option-dropdown-selector"
                                                         >
-                                                          <div
-                                                            class=""
-                                                          >
+                                                          <div class="">
                                                             <div
                                                               class="payment-option-dropdown-pay-with"
                                                             >
@@ -2913,7 +2912,7 @@
                                                             </span>
                                                           </div>
                                                           <div
-                                                            class="_e296pg"
+                                                            class="relative"
                                                           ></div>
                                                         </div>
                                                       </div>
@@ -2924,7 +2923,7 @@
                                                       <div class="_64pbdv">
                                                         <div class="_clw8y6">
                                                           <iframe
-                                                            class="_e296pg"
+                                                            class="relative"
                                                             name="payment-iframe"
                                                             width="100%"
                                                             height="250"
@@ -3429,9 +3428,7 @@
                                                       <div
                                                         class="confirm-pay__trip-detail-rate"
                                                       >
-                                                        <div
-                                                          class=""
-                                                        >
+                                                        <div class="">
                                                           <span
                                                             class="confirm-pay__trip-detail-rate-wrapper"
                                                           >
@@ -4338,5 +4335,322 @@
       allowpaymentrequest="true"
       style="display: none; visibility: hidden"
     ></iframe>
+
+    <!-- Payment modal -->
+    <div dir="ltr" class="hidden" id="payment-modal">
+      <div class="modal__backdrop"></div>
+      <section>
+        <div class="modal__container" data-testid="modal-container">
+          <div class="contents">
+            <div
+              class="container__border-0"
+              aria-hidden="true"
+              tabindex="0"
+            ></div>
+            <div class="contents">
+              <div
+                role="dialog"
+                aria-label="Add card details"
+                aria-modal="true"
+                class="modal-dialog__content-wrapper"
+                style="position: relative"
+              >
+                <div class="modal__close">
+                  <button
+                    aria-label="Close"
+                    type="button"
+                    class="btn-close"
+                    data-button="close"
+                  >
+                    <span class="relative">
+                      <svg
+                        viewBox="0 0 32 32"
+                        xmlns="http://www.w3.org/2000/svg"
+                        aria-hidden="true"
+                        role="presentation"
+                        focusable="false"
+                        style="
+                          display: block;
+                          fill: none;
+                          height: 16px;
+                          width: 16px;
+                          stroke: currentcolor;
+                          stroke-width: 3;
+                          overflow: visible;
+                        "
+                      >
+                        <path d="m6 6 20 20"></path>
+                        <path d="m26 6-20 20"></path>
+                      </svg>
+                    </span>
+                  </button>
+                </div>
+                <header class="modal__header-container">
+                  <div class="modal__header-wrapper"></div>
+                  <div class="modal__heading">
+                    <h1
+                      tabindex="-1"
+                      class="heading"
+                      elementtiming="LCP-target"
+                    >
+                      <div class="modal__header-text">
+                        <div class="_b9qfkc2">Add card details</div>
+                      </div>
+                    </h1>
+                  </div>
+                  <div class="modal__heading-wrapper"></div>
+                </header>
+                <div class="_12kfhdn">
+                  <div style="margin-bottom: 16px">
+                    <section
+                      role="status"
+                      class="e1rue1xl i144hzgs dir dir-ltr"
+                    >
+                      <div class="ccmqn89 dir dir-ltr">
+                        <div class="c1mzlq0d dir dir-ltr">
+                          <svg
+                            viewBox="0 0 16 16"
+                            xmlns="http://www.w3.org/2000/svg"
+                            aria-hidden="true"
+                            role="presentation"
+                            focusable="false"
+                            style="
+                              display: block;
+                              height: 16px;
+                              width: 16px;
+                              fill: currentcolor;
+                            "
+                          >
+                            <path
+                              d="m8 12c1.1045695 0 2 .8954305 2 2s-.8954305 2-2 2-2-.8954305-2-2 .8954305-2 2-2zm1.6-12v9.6h-3.2v-9.6z"
+                            ></path>
+                          </svg>
+                        </div>
+                      </div>
+                      <div class="mbv7i5o dir dir-ltr">
+                        <h2
+                          tabindex="-1"
+                          class="auth-container__forgot-text"
+                          elementtiming="LCP-target"
+                        >
+                          <div class="hk7fm8a dir dir-ltr">
+                            Let’s try that again
+                          </div>
+                        </h2>
+                        <div class="m1g17ezz h1q6ioub dir dir-ltr">
+                          Please check your payment details.
+                        </div>
+                      </div>
+                    </section>
+                  </div>
+                  <div>
+                    <div class="inline-block" style="margin-left: 8px">
+                      <span role="img" aria-label="Mastercard">
+                        <img
+                          src="https://a0.muscache.com/airbnb/static/packages/assets/frontend/legacy-shared/svgs/payments/logo_mastercard.f18379cf1f27d22abd9e9cf44085d149.svg"
+                          alt="Mastercard"
+                          height="9"
+                          aria-hidden="true"
+                        />
+                      </span>
+                    </div>
+                    <div class="inline-block" style="margin-left: 8px">
+                      <span role="img" aria-label="Visa Card">
+                        <img
+                          src="https://a0.muscache.com/airbnb/static/packages/assets/frontend/legacy-shared/svgs/payments/logo_visa.0adea522bb26bd90821a8fade4911913.svg"
+                          alt="Visa Card"
+                          height="9"
+                          aria-hidden="true"
+                        />
+                      </span>
+                    </div>
+                    <div class="inline-block" style="margin-left: 8px">
+                      <span role="img" aria-label="American Express Card">
+                        <img
+                          src="https://a0.muscache.com/airbnb/static/packages/assets/frontend/legacy-shared/svgs/payments/logo_amex.84088b520ca1b3384cb71398095627da.svg"
+                          alt="American Express Card"
+                          height="9"
+                          aria-hidden="true"
+                        />
+                      </span>
+                    </div>
+                    <div class="inline-block" style="margin-left: 8px">
+                      <span role="img" aria-label="Discover Card">
+                        <img
+                          src="https://a0.muscache.com/airbnb/static/packages/assets/frontend/legacy-shared/svgs/payments/logo_discover.7f05c82f07d62a0f8a69d54dbcd7c8be.svg"
+                          alt="Discover Card"
+                          height="9"
+                          aria-hidden="true"
+                        />
+                      </span>
+                    </div>
+                  </div>
+                  <div style="margin-top: 16px">
+                    <div class="confirm-pay__service">
+                      <div class="_clw8y6">
+                        <iframe
+                          class="relative"
+                          name="payment-iframe"
+                          width="100%"
+                          height="250"
+                          frameborder="0"
+                          scrolling="no"
+                          seamless=""
+                          src="payments/payment-form.html"
+                          title="Payments card input form"
+                        ></iframe>
+                      </div>
+                    </div>
+                    <div class="_v0ipn8">
+                      <div class="auth-container__form-email-wrapper">
+                        <label
+                          class="auth-container__form-email-label"
+                          for="zipCode"
+                        >
+                          <div class="auth-container__form-label">
+                            <div class="auth-container__form-label-text">
+                              ZIP code
+                            </div>
+                          </div>
+                          <div dir="ltr">
+                            <div class="auth-container__form-field-wrapper">
+                              <input
+                                name="zipCode"
+                                errormessage=""
+                                class="form__input"
+                                id="zipCode"
+                                autocomplete="off"
+                                type="text"
+                                aria-describedby=""
+                                value=""
+                              />
+                            </div>
+                          </div>
+                        </label>
+                      </div>
+                    </div>
+                    <div class="_v0ipn8">
+                      <div class="auth-container__form-email-field-wrapper">
+                        <label
+                          class="auth-container__form-email-label"
+                          for="zipCode"
+                        >
+                          <div class="auth-container__form-email-field-content">
+                            <div class="auth-container__form-label-text">
+                              ZIP code
+                            </div>
+                          </div>
+                          <div dir="ltr">
+                            <div class="auth-container__form-email-field-input">
+                              <input
+                                name="zipCode"
+                                ariadescribedby="credit-card-zip-error"
+                                class="form__input"
+                                id="zipCode"
+                                autocomplete="off"
+                                type="text"
+                                aria-describedby=""
+                                value=""
+                                errormessage="Postal code is required"
+                                aria-invalid="true"
+                              />
+                            </div>
+                          </div>
+                        </label>
+                      </div>
+                      <div class="contact-host__textarea-container">
+                        <div
+                          class="products-container__alert-warning-date-text"
+                          id="credit-card-zip-error"
+                        >
+                          <span style="margin-right: 4px">
+                            <svg
+                              viewBox="0 0 16 16"
+                              xmlns="http://www.w3.org/2000/svg"
+                              aria-label="Error"
+                              role="img"
+                              focusable="false"
+                              style="
+                                display: block;
+                                height: 16px;
+                                width: 16px;
+                                fill: currentcolor;
+                              "
+                            >
+                              <path
+                                d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0zm0 10.2a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm.8-6.6H7.2v5.2h1.6z"
+                              ></path>
+                            </svg>
+                          </span>
+                          <span class="font-semibold">This is required.</span>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="_14yb6ke" role="button" tabindex="0">
+                      <label for="billing_country_selector" class="_13kgb0p">
+                        <div class="_zhftk97">
+                          <div class="auth-container__form-label-text">
+                            Country/region
+                          </div>
+                        </div>
+                        <div class="_1ekxhnk" id="billing_country_selector">
+                          Philippines
+                        </div>
+                      </label>
+                      <div class="_lmil0">
+                        <svg
+                          viewBox="0 0 18 18"
+                          role="presentation"
+                          aria-hidden="true"
+                          focusable="false"
+                          style="
+                            height: 16px;
+                            width: 16px;
+                            display: block;
+                            fill: currentcolor;
+                          "
+                        >
+                          <path
+                            d="m16.29 4.3a1 1 0 1 1 1.41 1.42l-8 8a1 1 0 0 1 -1.41 0l-8-8a1 1 0 1 1 1.41-1.42l7.29 7.29z"
+                            fill-rule="evenodd"
+                          ></path>
+                        </svg>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <footer class="modal__footer">
+                  <div style="margin-top: 8px; margin-left: 8px">
+                    <div class="_h6avcp2">
+                      <button type="button" class="btn-link">Cancel</button>
+                    </div>
+                  </div>
+                  <div>
+                    <div data-testid="submit-button">
+                      <button type="button" class="btn-dark">
+                        <span class="btn-content-icontext">
+                          <span class="_3hmsj">Done</span>
+                        </span>
+                      </button>
+                    </div>
+                  </div>
+                </footer>
+              </div>
+            </div>
+            <div
+              class="container__border-0"
+              aria-hidden="true"
+              tabindex="0"
+            ></div>
+          </div>
+        </div>
+      </section>
+      <div class="container__border-0">
+        <div aria-live="polite" aria-atomic="true"></div>
+        <div aria-live="assertive" aria-atomic="true"></div>
+      </div>
+    </div>
+
+      <script src="assets/js/components.js"></script>
   </body>
 </html>
