fx bug no.12 - add hidden & inline-b utilities

--- a/resolutions_3.html
+++ b/resolutions_3.html
@@ -61,12 +61,15 @@
                   </svg>
                 </div>
                 <ol class="place__rate-text dir dir-ltr">
-                  <li class="place__rate-text-li dir dir-ltr">
+                  <li class="place__rate-text-li dir dir-ltr hidden-md">
+                    <span class="font-extrabold">Send or request money - Airbnb</span>
+                  </li>
+                  <li class="place__rate-text-li dir dir-ltr hidden inline-md">
                     <a href="/resolutions" class="text-link"
                       >Send money - Airbnb</a
                     >
                   </li>
-                  <li class="place__rate-text-li dir dir-ltr">
+                  <li class="place__rate-text-li dir dir-ltr hidden inline-md">
                     <span class="navbar-header__spacer dir dir-ltr" aria-hidden="true"
                       ><span class="navbar-header__spacer-icon"
                         ><svg
